# unifi-ml2-driver

./: .flake8  .gitignore  .stestr.conf  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  tmp.py  tox.ini
.github/workflows/: package.yml  publish.yml
devstack/: exercise.py  exercise.sh  plugin.sh  settings
devstack/upgrade/: resources.sh  settings  upgrade.sh
doc/source/: conf.py  configuration.rst  index.rst  installation.rst  supported-devices.rst
doc/source/dev/: dev-quickstart.rst
doc/source/include/: configure-neutron.rst
etc/neutron/plugins/ml2/: ml2_conf_genericswitch.ini.sample  ml2_conf_unifi.ini.sample
releasenotes/notes/: add_ngs_default_vlan-ab09e0f4fd7ce897.yaml  log-unknown-ngs-options-8a385406055ccc98.yaml
releasenotes/source/: conf.py
tempest_plugin/: config.py
tools/ngs-stress/: README.rst  ngs_stress.py
unifi_ml2_driver/: _i18n.py  batching.py  config.py  dns_handler.py  exceptions.py  generic_switch_mech.py  trunk_driver.py  unifi_api.py  unifi_mech.py
unifi_ml2_driver/devices/: __init__.py
unifi_ml2_driver/devices/netmiko_devices/: __init__.py  arista.py  aruba.py  brocade.py  cisco.py  cisco300.py  cumulus.py  dell.py  fake.py  hpe.py  huawei.py  huawei_vrpv8.py  juniper.py  mellanox_mlnxos.py  nokia.py  ovs.py  pluribus.py  ruijie.py  smc.py  sonic.py
unifi_ml2_driver/tests/unit/: test_advanced_features.py  test_batching.py  test_config.py  test_devices.py  test_generic_switch_mech.py  test_locking.py  test_trunk_driver.py  test_unifi_api.py  test_unifi_mech.py
unifi_ml2_driver/tests/unit/devices/: test_utils.py
unifi_ml2_driver/tests/unit/netmiko/: test_arista_eos.py  test_aruba.py  test_brocade_fastiron.py  test_cisco_300.py  test_cisco_ios.py  test_cisco_nxos.py  test_cumulus.py  test_cumulus_nvue.py  test_dell.py  test_huawei.py  test_huawei_vrpv8.py  test_juniper.py  test_netmiko_base.py  test_nokia_srl.py  test_ovs_linux.py  test_pluribus.py  test_smc.py  test_sonic.py
zuul.d/: networking-generic-switch-jobs.yaml  project.yaml
